# remote-control

./: CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.old
front/remote-ctrl/: README.md  package.json  vite.config.js
front/remote-ctrl/src/: App.vue  main.js  request.js
front/remote-ctrl/src/assets/: main.css
front/remote-ctrl/src/router/: index.js
front/remote-ctrl/src/stores/: device.js  error.js
front/remote-ctrl/src/views/: DeviceDetailView.vue  DeviceListView.vue  HomeView.vue
main/: CMakeLists.txt  http_server.c  http_server.h  main.c  main.h  my_time.c  my_time.h  rmt.c  rmt.h  smartconfig.c  smartconfig.h
